# CardSorter

./: .gitignore  README.md  pyproject.toml
Reports/htmlcov/: d_306ed2d68c6501e8_card_py.html  d_306ed2d68c6501e8_deck_py.html  d_37c50053b476e4ac_test_card_py.html  d_37c50053b476e4ac_test_deck_py.html  d_4449b915acdfaab6_test_main_py.html  d_bbc5a043a5bec2a1_constants_py.html  index.html
app/: main.py  sorter.py
lib/: card.py  deck.py
lib/utils/: constants.py  logging.py
tests/app/: test_main.py  test_sorter.py
tests/lib/: test_card.py  test_deck.py
tests/lib/utils/: test_logging.py
