[tool.poetry]
name = "card-sorter"
version = "0.1.0"
description = "Card sorting application. Demo for Bank of America interview."
authors = ["JosephHoughton <joseph.d.houghton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
