[tool.poetry]
name = "card-sorter"
version = "0.1.0"
description = "Card sorting application. Demo for Bank of America interview."
authors = ["JosephHoughton <joseph.d.houghton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^7.1.2"
mock = "^4.0.3"
black = "^22.3.0"
pip = "^22.1.2"
coverage = "^6.4.1"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
